[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "support-case-reviewer"
version = "0.1.0"
description = "MCP server for reviewing support cases against official support guidelines"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.scripts]
support-case-reviewer = "support_case_reviewer.server:main"
